--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="w3-cell w3-center w3-mobile" id="facebook" style="width:40%; padding:2vh">
 			<h3>Aktuality</h3>
-			<iframe
+			<iframe class="w3-mobile"
 				src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2Fcategory%2FEvent%2FRestaurace-Pilsk%25C3%25A1-hospoda-3035592926465880%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId"
 				style="border:none;overflow:hidden; width: 25em; height: 30em" scrolling="no" frameborder="0"
 				allowTransparency="true" allow="encrypted-media"></iframe>
