--- a/kontakt.html
+++ b/kontakt.html
@@ -31,7 +31,7 @@
 
 		<div class="w3-third w3-mobile">
 			<h3>Otevírací doba</h3>
-			<ul>
+			<ul class="w3-ul">
 				<li>PO: Zavřeno</li>
 				<li>ÚT: 11:30 - 22:00</li>
 				<li>ST: 11:30 - 22:00</li>
