--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<a href="./kontakt.html" class="w3-cell w3-button w3-mobile w3-hover-white">Kontakt</a>
 	</div>
 
-	<div class="w3-container w3-center">
-		<div class="w3-cell w3-mobile" id="content">
+	<div class="w3-row w3-center" id="home" style="margin-left: 20%; margin-right:20%;">
+		<div class="w3-half w3-center w3-mobile" id="content" style="width: 50%">
 			<h3>O nás</h3>
 			<p>Obecní pohostinské zařízení se společenským sálem (kapacita cca 150 osob) nabízí v celoročním provozu své
 				služby jak výletníkům, tak stálým hostům či organizovaným skupinám.</p>
@@ -34,9 +34,9 @@
 				související stavby. Na začátku léta 2019 proběhly renovační práce na veškerých interiérech včetně
 				kuchyňského zázemí.</p>
 		</div>
-		<div class="w3-cell w3-center w3-mobile" id="facebook" style="width:40%; padding:2vh">
+		<div class="w3-half w3-center w3-mobile" id="iframe" style="width:50%; padding:2vh">
 			<h3>Aktuality</h3>
-			<iframe class="w3-mobile"
+			<iframe class="w3-mobile" id="facebook"
 				src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2Fcategory%2FEvent%2FRestaurace-Pilsk%25C3%25A1-hospoda-3035592926465880%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId"
 				style="border:none;overflow:hidden; width: 25em; height: 30em" scrolling="no" frameborder="0"
 				allowTransparency="true" allow="encrypted-media"></iframe>
