--- a/menu.html
+++ b/menu.html
@@ -408,7 +408,7 @@
 							<td>21,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Radler/td>
+							<td>Radler</td>
 							<td>25,-&nbsp;Kč</td>
 							<td>15,-&nbsp;Kč</td>
 						</tr>
