--- a/menu.html
+++ b/menu.html
@@ -41,21 +41,6 @@
 						<td>55,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">K pivu</td>
-					</tr>
-					<tr>
-						<td>Chipsy</td>
-						<td>35,-&nbsp;Kč</td>
-					</tr>
-					<tr>
-						<td>Slané tyčinky</td>
-						<td>35,-&nbsp;Kč</td>
-					</tr>
-					<tr>
-						<td>Slané arašidy</td>
-						<td>35,-&nbsp;Kč</td>
-					</tr>
-					<tr>
 						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Polévky</td>
 					</tr>
 					<tr>
@@ -132,6 +117,8 @@
 						<td>Smažené rybí file se špenátem</td>
 						<td>90,-&nbsp;Kč</td>
 					</tr>
+				</table>
+				<table class=" w3-right w3-half w3-mobile ">
 					<tr>
 						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Saláty</td>
 					</tr>
@@ -151,8 +138,6 @@
 						<td>Salát s tuňákem, toast</td>
 						<td>100,-&nbsp;Kč</td>
 					</tr>
-				</table>
-				<table class=" w3-right w3-half w3-mobile ">
 					<tr>
 						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Přílohy</td>
 					</tr>
@@ -183,6 +168,21 @@
 					<tr>
 						<td>Pečivo (2 ks chleba)</td>
 						<td>10,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">K pivu</td>
+					</tr>
+					<tr>
+						<td>Chipsy</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Slané tyčinky</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Slané arašidy</td>
+						<td>35,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Dezerty</td>
@@ -326,38 +326,38 @@
 							<td>Myslivec Reserve</td>
 							<td>40,-&nbsp;Kč</td>
 						</tr>
-<tr>
+						<tr>
 	<td>Griotka</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Jablko Božkov</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Borovička</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Hruška</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Meruňka</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Vaječňák</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Zelená</td>
 	<td>30,-&nbsp;Kč</td>
-</tr>
-<tr>
+						</tr>
+						<tr>
 	<td>Polar Jahoda</td>
 	<td>35,-&nbsp;Kč</td>
-</tr>
+						</tr>
 						<tr>
 							<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Vína</td>
 						</tr>
@@ -386,6 +386,9 @@
 							<td>30,-&nbsp;Kč</td>
 						</tr>
 					</table>
+				</div>
+
+				<div class=" w3-right w3-half w3-mobile ">
 					<table class=" w3-mobile " id=" pivo " style=" width: 100% ">
 						<tr>
 							<td style=" text-align: center; font-weight: bold ">Pivo</td>
@@ -418,9 +421,7 @@
 							<td></td>
 						</tr>
 					</table>
-				</div>
-
-				<table class=" w3-right w3-half w3-mobile ">
+					<table class="w3-mobile ">
 					<tr>
 						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Nealko</td>
 					</tr>
@@ -554,7 +555,8 @@
 						<td>Grog</td>
 						<td>40,-&nbsp;Kč</td>
 					</tr>
-				</table>
+					</table>
+				</div>				
 			</div>
 		</div>
 	</div>
